--- a/public/views/index.html
+++ b/public/views/index.html
@@ -120,10 +120,10 @@
                   </div>
                 </div>
               </div>
-
-
             </div>
           </div>
+
+          <div class="section bg-iamge" style='background-image: url("assets/tmp-images/favorite-meal-bg.jpg");'></div>
         </div>
       </div>
       <footer class="footer">
